[workspace]
resolver = "2"
members = ["template"]

[workspace.package]
edition = "2021"
homepage = "https://github.com/sekunho/pkg"
include = ["../../LICENSE", "**/*.rs", "Cargo.toml"]
license = "BSD-3-Clause"
repository = "https://github.com/sekunho/pkg"
rust-version = "1.82"
version = "0.1.0-alpha"

[workspace.dependencies]
minijinja.version = "2.4"
minijinja-autoreload.version = "2.3.1"
serde.version = "1.0"
thiserror.version = "1.0"
