[workspace]
resolver = "2"
members = ["template", "database"]

[workspace.package]
edition = "2021"
homepage = "https://github.com/sekunho/pkg"
include = ["../../LICENSE", "**/*.rs", "Cargo.toml"]
license = "BSD-3-Clause"
repository = "https://github.com/sekunho/pkg"
rust-version = "1.82"
version = "0.1.0-alpha"

[workspace.dependencies]
database = { path = "database", version = "0.1.0-alpha" }
template = { path = "template", version = "0.1.0-alpha" }

minijinja.version = "2.7"
minijinja-autoreload.version = "2.7"
serde.version = "1.0"
serde_json = "1.0"

# DB
tokio.version = "1.41"
tokio-postgres.version = "0.7"
postgres-types.version = "0.2"
deadpool-postgres.version = "0.14"
postgres-openssl.version = "0.5"
openssl.version = "0.10"

config.version = "0.15"

thiserror.version = "1.0"
time.version = "0.3"
async-trait.version = "0.1"
tracing.version = "0.1"
