[package]
name = "su_sqlite"
edition.workspace = true
homepage.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
config.workspace = true
deadpool-sqlite.workspace = true
serde.workspace = true
