[package]
name = "su_template"
edition.workspace = true
homepage.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
minijinja = { workspace = true }
minijinja-autoreload = { workspace = true }
serde = { workspace = true, features = ["derive"] }
