[package]
name = "template"
edition.workspace = true
homepage.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
config.workspace = true
minijinja.workspace = true
minijinja-autoreload.workspace = true
minijinja-contrib.workspace = true
serde.workspace = true
thiserror.workspace = true
